# Ra-Labs-Ex-Multi-Agent

./: .env.example  .gitignore  Build_Notes.md  README.md  Take-Home Exercise - AI - Agno.txt  design.md  pyproject.toml
app/: config.py  observability.py  playground.py
app/agents/: analyst.py  critic.py  decision.py  research.py
app/models/: schemas.py
app/team/: investment_team.py
app/tests/: conftest.py  test_discovery.py  test_e2e.py  test_observability.py  test_resilience.py  test_schemas.py  test_verification.py  test_workflow.py
app/tools/: finance.py  resilient_wrappers.py  search.py  ticker_validation.py
examples/: sample_memo.md  sample_memo_given_public.md  sample_memo_search_private.md  sample_memo_search_public.md
scripts/: save_example_output.py
