[project]
name = "investment-team"
version = "0.1.0"
description = "Multi-agent investment analysis system using Agno"
requires-python = ">=3.11"
dependencies = [
    "agno",
    "google-genai",
    "tavily-python",
    "yfinance",
    "pydantic>=2.0",
    "python-dotenv",
    "sqlalchemy",
    "fastapi[standard]",
    "tenacity",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end integration tests (require API keys, ~2min)",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
